<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:screenOrientation="portrait"
    android:layout_height="match_parent"
    android:background="@mipmap/splash"
    tools:context=".RegisterUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="-41dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="275dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:contentDescription="TODO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editText3"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/textbg"
                android:ems="10"
                android:fontFamily="@font/calibri"
                android:inputType="textPersonName"
                android:paddingLeft="22sp"
                android:paddingRight="10sp"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailid"
                    android:inputType="textEmailAddress"
                    android:textColorHighlight="#00F5ABAB"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editText4"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:background="@drawable/textbg"
                android:fontFamily="@font/calibri"
                android:inputType="textPersonName"
                android:paddingLeft="22sp"
                android:paddingRight="10sp"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Confirmid"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/editText5"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/textbg"
                android:ems="10"
                android:fontFamily="@font/calibri"
                android:paddingLeft="22sp"
                android:paddingRight="10sp"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleContentDescription="@string/password"
                app:passwordToggleDrawable="@drawable/icon_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccenta"
                app:layout_constraintTop_toBottomOf="@+id/editText4">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editText6"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:background="@drawable/textbg"
                  android:fontFamily="@font/calibri"
                android:inputType="textPassword"
                android:paddingLeft="22sp"
                android:paddingRight="10sp"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleContentDescription="@string/password"
                app:passwordToggleDrawable="@drawable/icon_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccenta"
                app:layout_constraintTop_toBottomOf="@+id/editText5">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/loginbtn"
                android:fontFamily="@font/calibrib"
                android:onClick="Register"
                android:text="REGISTER"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:buttonTint="@color/checkbox"
                android:text=" I have read and agree to the Terms of Use and Privacy Policy. "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.432"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText6" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="87dp"
                android:layout_height="25dp"
                android:onClick="ClickOnRead"
                android:text="Click to Read"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox"
                app:layout_constraintEnd_toEndOf="@+id/checkBox"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toTopOf="@+id/checkBox"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
