<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@mipmap/splash">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="-41dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/editText3"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/textbg"
                android:ems="10"
                android:fontFamily="@font/calibri"
                android:inputType="textPersonName"
                android:paddingLeft="18sp"
                android:paddingRight="10sp"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.432"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleDrawable="@drawable/emailwhite"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/editText4"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/textbg"
                android:ems="10"
                android:fontFamily="@font/calibri"
                android:paddingLeft="18sp"
                android:paddingRight="10sp"
                android:textColorHint="@android:color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.432"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3"
                app:passwordToggleContentDescription="@string/password"
                app:passwordToggleDrawable="@drawable/icon_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccenta">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button10"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/loginbtn"
                android:fontFamily="@font/calibrib"
                android:onClick="LoginClick"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText4" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="23dp"
                android:layout_height="49dp"
                android:layout_marginEnd="20dp"
                android:elevation="25sp"
                android:fontFamily="@font/calibri"
                app:layout_constraintBottom_toBottomOf="@+id/editText3"
                app:layout_constraintEnd_toEndOf="@+id/editText3"
                app:layout_constraintTop_toTopOf="@+id/editText3"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/emailwhite" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="275dp"
                android:layout_height="150dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/calibri"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/logo" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/calibri"
                android:text="Forgot Password?"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button10" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:text="Don't hava an account?"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recaptcha" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>